--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,11 @@
     "@stomp/ng2-stompjs": "^7.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "bootstrap": "4.4.1",
+    "jquery": "3.4.1",
+    "angular-fusioncharts": "3.0.4",
+    "fusioncharts": "3.15.0-sr.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.23",
