--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@angular/material": "8.2.3",
+    "@angular/cdk": "8.2.3",
     "@stomp/ng2-stompjs": "^7.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
