--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ testem.log
 Thumbs.db
 bd-demo1-a65a9e2e7b9e.json
 encoded-key.base64
+frontend/node/node
+frontend/node/npm
+frontend/node/npm.cmd
