--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,23 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@angular/material": "8.2.3",
-    "@angular/cdk": "8.2.3",
     "@stomp/ng2-stompjs": "^7.2.0",
+    "angular-fusioncharts": "3.0.4",
+    "bootstrap": "4.4.1",
+    "fusioncharts": "3.15.0-sr.1",
+    "jquery": "3.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "bootstrap": "4.4.1",
-    "jquery": "3.4.1",
-    "angular-fusioncharts": "3.0.4",
-    "fusioncharts": "3.15.0-sr.1"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.23",
